# open-autonomous-tractor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: README.md
config/localization/: README.md  coordinate_params.yaml  saved_origins.yaml  simulation_poses.yaml
config/tractor_model/: joint_limits.yaml  tractor_model.rviz  tractor_model_params.yaml
config/visualization/: obstacle_params.yaml
datasets/: README.md
datasets/iam_field/: field_boundaries.csv  road_boundary_links.csv  road_boundary_points.csv
datasets/nav_goals/: global_path.csv  recorded_poses.csv
datasets/obstacles/: obstacles.csv
datasets/recorded_poses/: recorded_poses.csv
launch/: README.md  tractor_simulation_full.launch
launch/control/: simul_pure_pursuit_path_following.launch
launch/localization/: README.md  simulation.launch
launch/planning/: README.md  global_path_generator.launch  waypoint_recorder_gui.launch
launch/tractor_model/: display_rviz_tractor_model.launch
launch/visualization/: README.md  display_field_boundaries.launch  display_obstacles.launch  display_road_boundaries.launch  nav_goal_recorder.launch  obstacles_recorder.launch
meshes/tractor_model/: README.md
meshes/tractor_model/collision/: front_right.stl  implement.stl  rear_right.stl
meshes/tractor_model/visual/: body.stl  front_left.stl  rear_left.stl
scripts/: README.md
scripts/control/: pid_controller.py  pure_pursuit.py
scripts/localization/: __init__.py  coordinate_converter.py
scripts/planning/: global_path_generator.py  waypoint_recorder_gui.py
scripts/sample/: coordinate_conversion_sample.py
scripts/simulation/: simul_load_pose.py  simul_map_to_odom_tf_broadcaster.py  simul_pure_pursuit_path_following_controller.py  simul_steering_joint_updater.py  simul_tractor_odometry.py  simul_tractor_teleop.py  simul_world_to_map_tf_broadcaster.py
scripts/visualization/: field_boundary_visualizer.py  nav_goal_recorder.py  obstacle_manager.py  obstacle_visualizer.py  road_boundary_visualizer.py
urdf/: README.md
urdf/common/: common.xacro
urdf/robots/: robot_tractor_model.urdf.xacro
urdf/tractors/: tractor_model2.urdf.xacro
