<?xml version="1.0"?>
<package format="2">
  <name>open_autonomous_tractor</name>
  <version>0.1.0</version>
  <description>
    An open-source ROS package for autonomous tractor simulation and development.
    Provides frameworks for localization, path planning, visualization, and tractor model simulation.
  </description>

  <maintainer email="wonjaein@gmail.com">Wonjae Cho</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/wonjaein/open_autonomous_tractor</url>
  <url type="repository">https://github.com/wonjaein/open_autonomous_tractor</url>
  <url type="bugtracker">https://github.com/wonjaein/open_autonomous_tractor/issues</url>

  <author email="wonjaein@gmail.com">Wonjae Cho</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>xacro</build_depend>
  
  <!-- Export dependencies -->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  
  <!-- Execution dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>

  <export>
    <!-- You can specify if this is a metapackage -->
    <!-- <metapackage/> -->
    
    <!-- You can also specify the architecture if needed -->
    <!-- <architecture_independent/> -->
  </export>
</package>